parser/tests/bad/str04.st
% operands of 'string' concatenation must both have type 'string'

const s := "string" + 1
